# law

./: .gitignore  README.md
backend/: .env.example  main.py  pyproject.toml  requirements.txt
backend/agent/: __init__.py  agent.py  logging.py
backend/agent/llm/: __init__.py  manager.py
backend/agent/llm/gemini/: __init__.py
backend/agent/memory/: __init__.py  vector_database.py
backend/agent/memory/backends/: __init__.py  chroma.py
backend/app/: database.py  main.py  models.py  schemas.py
backend/app/agent/: graph.py  nodes.py  state.py
backend/app/api/v1/endpoints/: chat.py  upload.py
backend/app/core/: session.py
backend/app/routers/: articles_router.py  qa_router.py
backend/app/services/: document_parser.py  vector_store.py
backend/app/tools/: web_search.py
backend/chroma_db/: chroma.sqlite3
backend/config/: database.py
backend/controller/: chat_controller.py
backend/data/: luat_phong_chay.docx  parsed_law.json
backend/function_calling/: __init__.py  rag_tools.py  tools.py
backend/llm/gemini/: embedding.py  llm.py
backend/llm/vnpt/: __init__.py  embedding.py  llm.py
backend/memory/: chunking.py
backend/memory/backends/: factory.py  in_memory.py
backend/planner/: plan_classifier.py
backend/scripts/: build_vectorstore.py  import_to_db.py  parse_law.py
backend/service/: stream_manager.py  worker.py
backend/utils/: __init__.py  question_classifier.py
frontend/: app.js  index.html  package.json  style.css
frontend/src/components/: ChatLayout.tsx  ChatMessage.tsx
frontend/src/hooks/: useChat.ts
law-chatbot/: .env.example  docker-compose.yml
law-chatbot-backend/: .env.example  Dockerfile  main.py  requirements.txt
law-chatbot-backend/agent/: agent.py
law-chatbot-backend/config/: database.py  logging.py
law-chatbot-backend/controller/: chat_controller.py
law-chatbot-backend/model/: chat.py
law-chatbot-backend/service/: system_prompt.txt  worker.py
law-chatbot-frontend/: .env.example  package-lock.json
law-chatbot-frontend/src/: App.tsx  index.css
law-chatbot-frontend/src/api/: chat.ts
(+16 files in other folders)
